--- a/templates/upload.html
+++ b/templates/upload.html
@@ -22,6 +22,21 @@
             <p>Uploading... <span id="progressPercent">0%</span></p>
             <progress id="uploadProgress" value="0" max="100"></progress>
         </div>
+
+        <!-- File List Section -->
+        <div class="file-list" style="margin-top: 30px;">
+            <h2>Your Uploaded Files</h2>
+            <ul>
+                {% for file in files %}
+                <li>
+                    {{ file.filename }}
+                    <form action="{{ url_for('delete_file', file_id=file.id) }}" method="POST" style="display: inline;">
+                        <button type="submit" class="delete-button">Delete</button>
+                    </form>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 
     <script>
